--- a/TermApp/TermApp/TermApp.vcxproj
+++ b/TermApp/TermApp/TermApp.vcxproj
@@ -93,7 +93,7 @@
       <FunctionLevelLinking>true</FunctionLevelLinking>
       <IntrinsicFunctions>true</IntrinsicFunctions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>..\..\..\..\TGLibrary;..\..\..\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>..\..\..\..\TGLibrary;..\..\..\include;D:\Qt5.9.0\5.9\msvc2015\include;D:\Qt5.9.0\5.9\msvc2015\include\QtWidgets;.\GeneratedFiles;D:\Qt5.9.0\5.9\msvc2015\include\QtCore;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <BufferSecurityCheck>false</BufferSecurityCheck>
       <WholeProgramOptimization>false</WholeProgramOptimization>
       <PreprocessorDefinitions>_MBCS;%(PreprocessorDefinitions);WIN32_LEAN_AND_MEAN</PreprocessorDefinitions>
@@ -104,8 +104,8 @@
       <EnableCOMDATFolding>true</EnableCOMDATFolding>
       <OptimizeReferences>true</OptimizeReferences>
       <UACExecutionLevel>AsInvoker</UACExecutionLevel>
-      <AdditionalLibraryDirectories>..\..\..\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
-      <AdditionalDependencies>%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>..\..\..\lib;D:\Qt5.9.0\5.9\msvc2015\lib;%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Qt5Widgets.lib;Qt5Core.lib;Qt5Gui.lib;%(AdditionalDependencies)</AdditionalDependencies>
       <SubSystem>NotSet</SubSystem>
     </Link>
   </ItemDefinitionGroup>
@@ -128,7 +128,6 @@
     <ClCompile Include="..\..\..\..\TGLibrary\file\FileLib.cpp" />
     <ClCompile Include="..\..\..\..\TGLibrary\log\Logger.cpp" />
     <ClCompile Include="..\..\..\..\TGLibrary\md5\MD5.cpp" />
-    <ClCompile Include="..\..\..\..\TGLibrary\net\TcpClient.cpp" />
     <ClCompile Include="..\..\..\..\TGLibrary\pipe\PipeClient.cpp" />
     <ClCompile Include="..\..\..\..\TGLibrary\pipe\PipeServer.cpp" />
     <ClCompile Include="..\..\..\..\TGLibrary\register\RegLib.cpp" />
@@ -140,6 +139,7 @@
     <ClCompile Include="..\..\..\..\TGLibrary\xml\tinyxmlparser.cpp" />
     <ClCompile Include="..\..\..\..\TGLibrary\xml\XmlReader.cpp" />
     <ClCompile Include="FileParser.cpp" />
+    <ClCompile Include="GeneratedFiles\moc_TGTip.cpp" />
     <ClCompile Include="InitHook.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="MatchRule.cpp" />
@@ -166,7 +166,6 @@
     <ClInclude Include="..\..\..\..\TGLibrary\file\FileLib.h" />
     <ClInclude Include="..\..\..\..\TGLibrary\log\Logger.h" />
     <ClInclude Include="..\..\..\..\TGLibrary\md5\MD5.h" />
-    <ClInclude Include="..\..\..\..\TGLibrary\net\TcpClient.h" />
     <ClInclude Include="..\..\..\..\TGLibrary\pipe\PipeClient.h" />
     <ClInclude Include="..\..\..\..\TGLibrary\pipe\PipeServer.h" />
     <ClInclude Include="..\..\..\..\TGLibrary\register\RegLib.h" />
@@ -176,6 +175,7 @@
     <ClInclude Include="..\..\..\..\TGLibrary\xml\tinyxml.h" />
     <ClInclude Include="..\..\..\..\TGLibrary\xml\XmlReader.h" />
     <ClInclude Include="FileParser.h" />
+    <ClInclude Include="GeneratedFiles\ui_tip.h" />
     <ClInclude Include="InitHook.h" />
     <ClInclude Include="MatchRule.h" />
     <ClInclude Include="RequestQueue.h" />
@@ -184,7 +184,21 @@
     <ClInclude Include="TermInfo.h" />
     <ClInclude Include="TGConfig.h" />
     <ClInclude Include="TGLogin.h" />
-    <ClInclude Include="TGTip.h" />
+    <CustomBuild Include="TGTip.h">
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">"$(QTDIR)\bin\moc.exe" "%(FullPath)" -o ".\GeneratedFiles\moc_%(Filename).cpp"</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Moc%27ing %(Identity)... </Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\GeneratedFiles\moc_%(Filename).cpp</Outputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(QTDIR)\bin\moc.exe;%(FullPath)</AdditionalInputs>
+    </CustomBuild>
+  </ItemGroup>
+  <ItemGroup>
+    <CustomBuild Include="tip.ui">
+      <FileType>Document</FileType>
+      <Command Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">"$(QTDIR)\bin\uic.exe" -o ".\GeneratedFiles\ui_%(Filename).h" "%(FullPath)"</Command>
+      <Message Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Uic%27ing %(Identity)... </Message>
+      <Outputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">.\GeneratedFiles\ui_%(Filename).h;%(Outputs)</Outputs>
+      <AdditionalInputs Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">$(QTDIR)\bin\uic.exe;%(AdditionalInputs)</AdditionalInputs>
+    </CustomBuild>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
